--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,11 +2,12 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif;
   background-color: var(--black40);
   color: white;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 ::-webkit-scrollbar {
@@ -63,6 +64,7 @@ button {
   margin: 0;
   border: 0px;
   outline: 0px;
+  color: var(--white10);
 }
 
 :root {
